--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,7 +1,7 @@
 :root {
-	--primary: #FF6B00;
-	--secondary: #00E5FF;
-	--bg: #0D0D0D;
+	--prm: #FF6B00;
+	--scd: #00E5FF;
+	--bg: #1b1b1b;
 	--bg-dark: #050505;
 	--text: #bebebe;
 	--acc: #FFD700;
