--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,80 +1,11 @@
-:root {
-	--prm: #FF6B00;
-	--scd: #00E5FF;
-	--bg: #1b1b1b;
-	--bg-dark: #050505;
-	--text: #bebebe;
-	--acc: #FFD700;
-}
-
-* {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-	font-family: Consolas, monospace;
-}
-
-body {
-	background-color: var(--bg-dark);
-}
-
-.main {
-	display: flex;
-	gap: 2em;
-	width: 100%;
-	padding: 2em;
-	background-color: var(--bg-dark);
-}
-
 .link {
 	text-decoration: none;
-	color: var(--prm);
-	font-weight: bold;
+	color: var(--bs-primary);
 	font-size: 1em;
 	padding-top: 1em;
 }
 
 .link:hover {
-	color: var(--scd);
+	color: var(--bs-secondary);
 	text-decoration: underline;
-}
-
-ul {
-	list-style: none;
-	padding: 0;
-}
-
-ul li {
-	margin-bottom: 10px;
-}
-
-hr {
-	border: 0;
-	border-top: 2px solid var(--acc);
-	margin: 20px auto;
-}
-
-p {
-	color: var(--text);
-	font-size: 0.75em;
-	font-family: "Trebuchet MS", sans-serif;
-}
-
-@media (max-width: 768px) {
-	.main {
-		flex-direction: column;
-		align-items: center;
-		padding: 0;
-	}
-
-	.col {
-		flex: 1 1 100%;
-		max-width: 100%;
-	}
-}
-
-@media (max-width: 400px) {
-	.main {
-		font-size: 0.5em;
-	}
 }
